--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "fission-template-cli",
-  "version": "0.0.3",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "bin": {
-    "fiss": "./bin/www"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/YonSunZhen/faas-mould.git"
-  },
-  "keywords": [
-    "fission"
-  ],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "commander": "^4.0.0",
-    "consolidate": "^0.15.1",
-    "download-git-repo": "^3.0.2",
-    "ejs": "^2.7.1",
-    "inquirer": "^7.0.0",
-    "metalsmith": "^2.3.0",
-    "ncp": "^2.0.0",
-    "ora": "^3.4.0",
-    "shelljs": "^0.8.3"
-  }
+    "name": "fission-template-cli",
+    "version": "0.0.6",
+    "description": "",
+    "author": "",
+    "license": "ISC",
+    "bin": {
+        "fiss": "./bin/fiss"
+    },
+    "scripts": {
+        "dev": "rollup -c -w",
+        "build": "rollup -c"
+    },
+    "keywords": [
+        "faas",
+        "fission",
+        "fission-cli"
+    ],
+    "dependencies": {
+        "chalk": "^2.4.2",
+        "cli-table": "^0.3.1",
+        "commander": "^2.20.0",
+        "download-git-repo": "^2.0.0",
+        "inquirer": "^6.5.0",
+        "ncp": "^2.0.0",
+        "nedb": "^1.8.0",
+        "ora": "^3.4.0"
+    },
+    "devDependencies": {
+        "@types/cli-table": "^0.3.0",
+        "@types/nedb": "^1.8.8",
+        "rollup": "^1.17.0",
+        "rollup-plugin-commonjs": "^10.0.1",
+        "rollup-plugin-typescript": "^1.0.1",
+        "typescript": "^3.5.3"
+    }
 }
